chore: .env.example

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ AUTH_SECRET=""
 # Next Auth Discord Provider
 AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
