--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
+UPLOADTHING_TOKEN=""
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
