--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@uploadthing/react": "^7.3.3",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.5",
     "class-variance-authority": "^0.7.1",
@@ -77,6 +78,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
+    "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
