--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
+    "react-toastify": "^11.0.5",
     "recharts": "2.15.4",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
