--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@anaralabs/lector": "^3.7.2",
     "@auth/prisma-adapter": "^2.7.2",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.5.0",
@@ -69,6 +70,7 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.9",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
@@ -81,6 +83,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
+    "use-debounce": "^10.0.6",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
