--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,4 @@ UPLOADTHING_TOKEN=""
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/ronum-new"
-GROK_API_KEY=""
+OPENAI_API_KEY=""
