--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.66",
+    "@ai-sdk/react": "^2.0.93",
     "@anaralabs/lector": "^3.7.2",
     "@auth/prisma-adapter": "^2.7.2",
     "@hookform/resolvers": "^5.2.2",
@@ -64,6 +66,8 @@
     "@uploadthing/react": "^7.3.3",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.5",
+    "add": "^2.0.6",
+    "ai": "^5.0.93",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -76,6 +80,7 @@
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.9",
+    "pnpm": "^10.22.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
